text: Read the first CL article

--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -1,5 +1,5 @@
-\section{Ontology-related}
-\subsection{Cell type discovery using single-cell transcriptomics: implications for ontological representation}
+# Ontology-related
+## Cell type discovery using single-cell transcriptomics: implications for ontological representation
     \cite{aevermann2018cell}
 \subsubsection{Highlights}
 
@@ -46,7 +46,7 @@ Number of cell types is way too big for a small group of dedicated curators.
 
 Also mentions of timely fashion. 
 
-\subsection{ontoProc: Ontology interfaces for Bioconductor, with focus on cell type identification}
+## ontoProc: Ontology interfaces for Bioconductor, with focus on cell type identification}
 \url{https://www.bioconductor.org/packages/release/bioc/vignettes/ontoProc/inst/doc/ontoProc.html}
     
 \subsubsection{Highlights}
@@ -85,7 +85,7 @@ Uses pbmc3k dataset as an example. Renders a very cool visualization of the Cell
 
 Already uses a technotype definition!!! That is amazing. 
 
-\subsection{Cells in ExperimentaL Life Sciences (CELLS-2018): capturing the knowledge of normal and diseased cells with ontologies}
+## Cells in ExperimentaL Life Sciences (CELLS-2018): capturing the knowledge of normal and diseased cells with ontologies
     \cite{sarntivijai2017cells}
     
 \subsubsection{Highlights}
@@ -113,7 +113,7 @@ Probabilities cannot be asserted directly into the ontology, but rather using ot
 
 \subsubsection{Comments}
 
-\subsection{Cells in ExperimentaL Life Sciences (CELLS- 2018): capturing the knowledge of normal and diseased cells with ontologies}
+## Cells in ExperimentaL Life Sciences (CELLS- 2018): capturing the knowledge of normal and diseased cells with ontologies
     \cite{sarntivijai2019cells}
     
 \subsubsection{Highlights}
@@ -155,7 +155,8 @@ We anticipate promising research progress in the cell-related ontology field in 
 \subsubsection{Comments}
 
 
-\subsection{Reporting and connecting cell type names and gating definitions through ontologies}
+## Reporting and connecting cell type names and gating definitions through ontologies
+
     \cite{overton2019reporting}
     
 \subsubsection{Highlights}
@@ -220,11 +221,61 @@ Manual curation will not happen for all proteins of all organisms.
 
 https://github.com/jamesaoverton/experimental-cell-ontology
 
-\subsection{Title}
-    \cite{citation}
-    
-\subsubsection{Highlights}
+
+## An ontology for cell types
+[@doi:10.1186/gb-2005-6-2-r21]
+
+### Highlights
+the annotation of  phenotypes is hampered by a lack of structured information describing a variety of other biological objects, including cell types.
+
+To address these needs, we have developed an ontology that describes the cell types of the major model organisms, both animal and plant.
+
+Its use will allow a biologist to query a sin- gle database with such questions as: list all of the cell types in
+mouse that express the Notch gene and all of the cell types in Drosophila and Caenorhabditis elegans that express the closest homolog of this gene.
+
+The first design decision was whether we should attempt to integrate cell types from all phyla within a single ontology or build independent ontologies for different taxonomic groups.
+
+Despite these problems in building an 'integrated' cell-type ontology, the advantages, were we to succeed, outweigh them, and we have therefore taken this approach to develop a single ontology that inte- grates cell types from different phyla.
+
+ontology appears as a complex hierarchy (technically known as a directed acyclic graph, or DAG) where a given term (or concept) may not only have several children, but also several parents. The parent and child terms are connected to each other by is_a and develops_from relationships.
+
+it is far from obvious that vertebrate and inverte- brate pigment cells are homologous and these concepts are therefore described as pigment_cell_(sensu_Vertebrata) and pigment_cell_(sensu_Nematoda_and_Protostoma, respectively.
+
+The two top-level nodes of the Cell Ontology are cell_in_vivo and experimentally_modified_cell.
+
+The organism-independent classification of cells follows several different criteria that include: 'function' (for example, electrically_excitable_cell, secretory_cell, photosynthetic_cell), histology (for example, epthelial_cell, mesenchyme_cell), lineage (for example, ectodermal_cell, endodermal_cell) and ploidy (for example, haploid_cell, polyploid_cell).
+
+Kupffer cells are specialized vertebrate macro- phages of the reticuloendothelial system. They function to fil- ter small foreign particles (including bacteria) and old reticulocytes from the blood. In the Cell Ontology they are to be found by their function (they are a type of defensive_cell), by their lineage (they are derived from a mesodermal_cell derived from a hematopoietic_stem_cell, itself a type of stem_cell), by their morphology (they are a type of circulating_cell) and by their organism (they are a type of animal_cell).
+
+
+It is designed to be useful in the sense that a researcher should be able to find, in a rapid and intuitive way, any cell type in any of the major model organisms and, having found it, learn a considerable amount about that cell type and its relationships to other biological objects.
+
+Cell-type unique identifiers (ID) that can be incorporated into any database holding cell-type-associated knowledge.
+
+While we expect such bio- informatics applications to be its immediate use, we hope that, in the longer term, all biologists will find the ontology useful
+
+Cells are the biological units with which tissues and organs and organ systems are built. A rich and explicit description of cell types across phyla that are adapted by bio- logical databases will help facilitate this transition.
+
+These cell types have been collated from our own knowledge, from major textbooks (for example [20-22])
+
+20. Williams PL, (Ed): Gray's Anatomy 38th edition. Edinburgh: Churchill Livingstone; 1996.
+21. Alberts B, Johnson A, Lewis J, Raff M, Roberts K, Walter P: The Molec- ular Biology of the Cell 4th edition. New York: Garland; 2002.
+22. Esau K: The Anatomy of Seed Plants 2nd edition. New York: John Wiley; 1977
+
+### Comments
+
+The architecture of CL has changed over time. 
+
+The CL had originally a _learning_ goal (among others) : "learn a considerable amount" . This explains a "bias" towards didatic definitions of cell types. 
 
 
 
-\subsubsection{Comments}
+# Template 
+
+## Title
+[citation]
+### Highlights
+
+
+
+### Comments
