text: Add notes of 2011 cell ontology paper

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -4,6 +4,11 @@
 This is a collection of resources to be read and parsed.
 
 
+Masci AM, Arighi CN, Diehl AD, Lieberman AE, Mungall C, Scheuermann RH, Smith B, Cowell LG: An improved ontological representation of dendritic cells as a paradigm for all cell types. BMC Bioinformatics 2009, 10:70
+
+
+Diehl AD, Augustine AD, Blake JA, Cowell LG, Gold ES, Gondré-Lewis TA, Masci AM, Meehan TF, Morel PA, Nijnik A, Peters B, Pulendran B, Scheuermann RH, Yao QA, Zand MS, Mungall CJ: Hematopoietic cell types: Prototype for a revised cell ontology. J Biomed Inform 2010, http://www. ncbi.nlm.nih.gov/pubmed/20123131
+
 https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-20-supplement-5
 
 
