code: Convert manually tex headers to md

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -40,10 +40,10 @@ https://www.pnas.org/content/105/51/20067
 
 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2662812/
 
-\subsection{Molecular taxonomy of major neuronal classes in the adult mouse forebrain} 
-\cite{sugino2006molecular}
+## Molecular taxonomy of major neuronal classes in the adult mouse forebrain 
+\cite{sugino2006molecular
 
-/Genes and homology in nervous system evolution: Comparing gene functions, expression patterns, and cell type molecular fingerprints   \cite{arendt2005genes}
+/Genes and homology in nervous system evolution: Comparing gene functions, expression patterns, and cell type molecular fingerprints   \cite{arendt2005genes
 
 Musser, J. M. & Wagner, G. P. Character trees from transcriptome data: origin and individuation of morphological characters and the so-called ‘species signal’. J. Exp. Zool. 324, 588–604 (2015).
 Introduces the phenomenon of concerted transcriptome evolution and shows how it influences the comparison of cell type transcriptomes
