--- a/content/04.concepts.md
+++ b/content/04.concepts.md
@@ -2,8 +2,8 @@
 developmental homoplasy
 
 
-\subsection{The origin and evolution of cell types}
-    \cite{arendt2016origin}
+## The origin and evolution of cell types
+    \cite{arendt2016origin
     
 terminal selectors:  a novel and unique combination of transcription factors, which establish a cell type identity 
 
@@ -32,8 +32,8 @@ phenotypically similar due to independent changes occurring in separate evolutio
 
 Concerted evolution: Similar phenotypic changes that occur simultaneously across different cell types of the same species as a result of altering genetic information shared among the cell types.
 
-\subsection{The evolution of cell types in animals: emerging principles from molecular studies}
-    \cite{arendt2008evolution}
+## The evolution of cell types in animals: emerging principles from molecular studies
+    \cite{arendt2008evolution
     
 typogenetic tree 
 
@@ -41,29 +41,29 @@ cell typogenesis:  evolutionary diversification of cell type
 
 ‘Recombination’ between cell types" as a mechanism to form new cell types in the end highlights the notion of intersected cell types
 
-\subsection{Defining cell types and states with single-cell genomics}
-    \cite{trapnell2015defining}
+## Defining cell types and states with single-cell genomics
+    \cite{trapnell2015defining
     
 attractor is a location in the state space of a dynamical system that will move toward and to which it will return if perturbed. (" what we think of as distinct cell types correspond to attractors of that system (Kauffman 1993)"
 
-\subsection{Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication. }
-    \cite{plachetzki2007key}
+## Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication. 
+    \cite{plachetzki2007key
     
 bricolage/tinkering:  novel traits originate as new combinations of existing traits
 
-\subsection{Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain}
-    \cite{sugino2019mapping}
+## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
+    \cite{sugino2019mapping
     
 Pan-neuronal genes (genes expressed commonly in all neuronal populations but expressed at lower levels or not at all in nonneuronal cell populations.
 
-GACPs: \subsection{Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain}
-    \cite{sugino2019mapping}
+GACPs: ## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
+    \cite{sugino2019mapping
     
-\subsection{Terminal Selectors of Neuronal Identity}
-    \cite{hobert2016terminal}    
+## Terminal Selectors of Neuronal Identity
+    \cite{hobert2016terminal    
 Given the neuron identity-defining properties, I proposed to call these transcription factors “terminal selectors.This terminology is an extension of the selector gene concept, originally proposed by Garcia-Bellido (1975).
 
-\subsection{PanglaoDB: a web server for exploration of mouse and human single-cell RNA sequencing data}
-    \cite{citation}
+## PanglaoDB: a web server for exploration of mouse and human single-cell RNA sequencing data
+    \cite{citation
 
 In such cases it is possible to compare if the predicted cell type matches the ‘biological’ cell type. We identified 17 independent datasets with homogeneous cell-type populations, where the biological cell type has been reported (this
