--- a/content/05.systems.md
+++ b/content/05.systems.md
@@ -1,11 +1,11 @@
 # Classification systems
 
-\section{Classification systems}
+# Classification systems
 
-\subsection{A periodic table of cell types}
-    \cite{xia2019periodic}
+## A periodic table of cell types
+    \cite{xia2019periodic
     
-\subsubsection{Highlights}
+### Highlights
 Propose a ‘periodic table of cell types’ can be as a framework for distinguishing cell types from cell states, in which the different states of the same cell type are analogous to ‘isotopes’
 
 Shape  has long been used as the dominant feature for defining the identities and functions of different cell types.
@@ -29,7 +29,7 @@ Cell types from different lineages may have have similar functions (developmenta
 
 The periodic table of cell types would differ across species.The table should be taken as just a summary of our existing knowledge of cell types. T
 
-\subsubsection{Comments}
+### Comments
 
  "With such a periodic table of cell types, we can annotate each cell
 type with biological information, including organ system, cell morphology, cell abundance and the composition of its epigenome and transcriptome." --> You do not need a periodic table for that!
