--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -1,7 +1,7 @@
-\subsection{Heterogeneity of neutrophils}
-    \cite{ng2019heterogeneity}
+## Heterogeneity of neutrophils
+    \cite{ng2019heterogeneity
     
-\subsubsection{Highlights}
+### Highlights
 
 Immunity functions through the concerted actions of diverse cell types with specialized tasks
 
@@ -49,15 +49,15 @@ Do tissue- specific neutrophils exist?
 marginal zoneneutrophils in the human spleen adopt unique B cell-stimulating properties through the secretion of cytokines, chemoattractants and the pattern recognition receptor pentraxin 3 that stimulate class switch recombination and immunoglobulin production by B cells that reside in this region54,55
 .
 
-\subsubsection{Comments}
+### Comments
 
 References fluctuate between human, mouse or general "neutrophils".
 
-\subsection{Neuronal cell types
-}
-    \cite{masland2004neuronal}
+## Neuronal cell types
 
-\subsubsection{Highlights}
+    \cite{masland2004neuronal
+
+### Highlights
 
 Identifying the functionally distinct types of neuron is central to any bottom-up understanding of how the brain works.
 
@@ -87,13 +87,13 @@ Finally, individual types of retinal neuron exhibit regular spacing, such that n
 For the first time in any substantially complex CNS structure, the inventory of cell types in the retina appears to be virtually complete.
 
 
-\subsubsection{Comments}
+### Comments
 
-\subsection{Title}
-    \cite{citation}
+## Title
+    \cite{citation
     
-\subsubsection{Highlights}
+### Highlights
 
 
 
-\subsubsection{Comments}
+### Comments
