--- a/content/07.evolutionary.md
+++ b/content/07.evolutionary.md
@@ -1,8 +1,8 @@
-\section{Evolutionary perspectives}
-\subsection{How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology}
-    \cite{marioni2017single}
+# Evolutionary perspectives
+## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
+    \cite{marioni2017single
     
-\subsubsection{Highlights}
+### Highlights
 
 In scRNA-seq, information about a cell’s location within the cell type under study is not normally available. 
 
@@ -20,19 +20,19 @@ From an evolutionary viewpoint, a new cell type identity is established by a nov
 
 Dopaminergic neurons and the glutamatergic neurons of the subthalamic nucleus (STN) are different, but share similar signatures. Thus, these neurons likely represent sister cell types.
 
-\subsubsection{Comments}
+### Comments
 
 One critical challenge in the comparison of cellular transcriptomes between species is to establish the precise orthology and paralogy
 --> This limits definitions of cell types for more than one species. 
 
-Disagree with the developmental tree, as it is strictly \textit{not} a tree; transdifferentiation exists for example, and there are overlapping types.
+Disagree with the developmental tree, as it is strictly \textit{not a tree; transdifferentiation exists for example, and there are overlapping types.
 
 Very good article, strong evolutionary perspective.
 
-\subsection{The origin and evolution of cell types}
-    \cite{arendt2016origin}
+## The origin and evolution of cell types
+    \cite{arendt2016origin
     
-\subsubsection{Highlights}
+### Highlights
 Key to cell type identity are evolutionary changes in the ‘core regulatory complex’ (CoRC) of transcription factors, that make emergent sister cell types distinct, enable their independent evolution and regulate cell type-specific traits termed apomeres.
 
 Typically, cellular functions require the cooperation of biomolecules that constitute  cellular modules. Consequently, a cell type has been envisaged as expressing an assemblage of cellular modules that perform discrete subfunctions.
@@ -87,7 +87,7 @@ Our evolutionary definition of a cell type will facilitate comparative cell biol
 
 The recognition that cell type identity and specific function depend on only a small set of genetic information, including CoRCs and apomeres, enables the efficient identification and categorization of cell types across the animal tree.
 
-\subsubsection{Comments}
+### Comments
 Defines many interesting concepts:
 
 Cellular modules: Protein complexes, pathways and molecular machines that make up cell structure and function.
@@ -109,10 +109,10 @@ By Arendt's definition "specialized Antigen Presenting Cells" is not a cell type
 
 The recognition that cell type identity and specific function depend on only a small set of genetic information, including CoRCs and apomeres, enables the efficient identification and categorization of cell types across the animal tree. --> I tend to disagre with this sentence.
 
-\subsection{The evolution of cell types in animals: emerging principles from molecular studies}
-    \cite{arendt2008evolution}
+## The evolution of cell types in animals: emerging principles from molecular studies
+    \cite{arendt2008evolution
     
-\subsubsection{Highlights}
+### Highlights
 
 How did the first cell types emerge and become distinct in animal evolution?
 
@@ -153,7 +153,7 @@ The principle of cell type functional segregation elegantly explains the evoluti
 
 Then the resulting typogenetic tree of homologous cell types is congruent between species, we will be able to infer the evolutionary history of cell type diversification for entire organ systems.
 
-\subsubsection{Comments}
+### Comments
 
 "there are hundreds of human cell types"
 
@@ -162,10 +162,10 @@ Concept of a "typo genetic tree".
 I like the retina as a model.
 
 
-\subsection{Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication.}
-    \cite{plachetzki2007key}
+## Key transitions during the evolution of animal phototransduction: novelty, "tree-thinking," co-option, and co-duplication.
+    \cite{plachetzki2007key
     
-\subsubsection{Highlights}
+### Highlights
 
 "Duplication’’ (either by copying or by fission) happens at other levels of biological organization than gene duplication. Other novel traits originate as new combinations of existing traits, a process sometimes termed bricolage, or tinkering 
 
@@ -199,7 +199,7 @@ Co-option, not co-duplication was responsible for the origins of the interaction
 
 For instance, can gene duplications provide a selective context for cell type duplications to occur? Can co-option by a given cell type of an alternative signaling or developmental pathway reinforce the evolution of novel tissues, such as vertebrate or molluscan retinas? 
 
-\subsubsection{Comments}
+### Comments
 
 Very good case study of cell type divergence. Considers major classes of cell types: rods and cones, using common features for a range of species. Evolutionary toughts are restricted to species-specific cell types
 
