--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -1,7 +1,7 @@
 # Ontology-related
 ## Cell type discovery using single-cell transcriptomics: implications for ontological representation
-    \cite{aevermann2018cell}
-\subsubsection{Highlights}
+    \cite{aevermann2018cell
+### Highlights
 
 The Cell Ontology (CL) is a biomedical ontology  to provide reference nomenclature for in vivo cell types in humans and major model organisms. However, the advent of high-content single-cell transcriptomics for cell type characterization has resulted in a number of challenges for their representation in the CL.
 
@@ -38,7 +38,7 @@ We are now establishing an extension ontology module containing provisional defi
 For biomedical ontologies to stay relevant, it will be critical for ontology developers to establish procedures for the processing and incorporation of representations derived from these data-intensive technologies into reference ontologies in a timely fashion. 
 
 
-\subsubsection{Comments}
+### Comments
 
 Nice gathering of articles and conclusions regarding cell types! Tasty!
 
@@ -46,10 +46,10 @@ Number of cell types is way too big for a small group of dedicated curators.
 
 Also mentions of timely fashion. 
 
-## ontoProc: Ontology interfaces for Bioconductor, with focus on cell type identification}
-\url{https://www.bioconductor.org/packages/release/bioc/vignettes/ontoProc/inst/doc/ontoProc.html}
+## ontoProc: Ontology interfaces for Bioconductor, with focus on cell type identification
+\url{https://www.bioconductor.org/packages/release/bioc/vignettes/ontoProc/inst/doc/ontoProc.html
     
-\subsubsection{Highlights}
+### Highlights
 
 The ambitions of collaborative single cell biology will only be achieved through the coordinated efforts of many groups, to help clarify cell types and dynamics in an array of functional and environmental contexts. The use of formal ontology in this pursuit is well-motivated and research progress has already been substantial.
 
@@ -79,16 +79,16 @@ In order to permit experimentation with interfaces and new content that may be q
 
 Aaron Lun has produced a mapping from informal terms used in the Human Primary Cell Atlas to Cell Ontology tags. We provisionally include a copy of this mapping in ontoProc:
 
-\subsubsection{Comments}
+### Comments
 
 Uses pbmc3k dataset as an example. Renders a very cool visualization of the Cell-Ontology relations wrt a dataset. 
 
 Already uses a technotype definition!!! That is amazing. 
 
 ## Cells in ExperimentaL Life Sciences (CELLS-2018): capturing the knowledge of normal and diseased cells with ontologies
-    \cite{sarntivijai2017cells}
+    \cite{sarntivijai2017cells
     
-\subsubsection{Highlights}
+### Highlights
 
 The Cell Ontology (CL) and Cell Line Ontology (CLO) have long been established as reference ontologies in the OBO framework. We have compiled a series of the challenges and the proposals of solutions in this CELLS (Cells in ExperimentaL Life Sciences) thematic series that cover the grounds of standing issues and the directions, which were discussed in the First International Workshop on CELLS at the the International Conference on Biomedical Ontology (ICBO).
 
@@ -111,12 +111,12 @@ As shown in the few scenarios here, it is clear without a doubt that experimenta
 
 Probabilities cannot be asserted directly into the ontology, but rather using other modeling techniques such as nanopublications [8] or OBAN [9] to avoid logical errors when reasoning with the ontology.
 
-\subsubsection{Comments}
+### Comments
 
 ## Cells in ExperimentaL Life Sciences (CELLS- 2018): capturing the knowledge of normal and diseased cells with ontologies
-    \cite{sarntivijai2019cells}
+    \cite{sarntivijai2019cells
     
-\subsubsection{Highlights}
+### Highlights
 
 The 2nd International Workshop on Cells in ExperimentaL Life Science (CELLS-2018) focused on two themes of knowledge representation, for newly-discovered cell types and for cells in disease states.
 
@@ -152,13 +152,13 @@ A variety of recent studies have discovered many new cell types, which sometimes
 We anticipate promising research progress in the cell-related ontology field in the years to come.
 
 
-\subsubsection{Comments}
+### Comments
 
 
 ## Reporting and connecting cell type names and gating definitions through ontologies
     [@doi:10.1186/s12859-019-2725-5]
     
-\subsubsection{Highlights}
+### Highlights
 Human immunology studies often rely on the isolation and quantification of cell populations from an input sample based on flow cytometry and related techniques. Such techniques classify cells into populations based on the detection of a pattern of markers. The description of the cell populations targeted in such experiments typically have two complementary components: the description of the cell type targeted (e.g. ‘T cells’), and the description of the marker pattern utilized (e.g. CD14−,CD3+).
 
 We here describe our attempts to use ontologies to cross-compare cell types and marker patterns (also referred to as gating definitions). 
@@ -212,7 +212,7 @@ Abbreviations
 Table 2: 
 Markers that could not be precisely mapped to individual PRO protein chains
 
-\subsubsection{Comments}
+### Comments
 
 Seems that they a aim at a very advanced very level of usage before we lay a bit more of the foundations. 
 
