--- a/content/10.elife.md
+++ b/content/10.elife.md
@@ -1,7 +1,7 @@
 
-\subsection{Philosophy of Biology: Towards a classification of stem cells}
-    \cite{laplane2019philosophy}
-\subsubsection{Highlights}
+## Philosophy of Biology: Towards a classification of stem cells
+    \cite{laplane2019philosophy
+### Highlights
 Stem cells have traditionally been viewed as distinct from most other types of cells. 
 
 Tools of metaphysics to describe a classification scheme for stem cells, a philosophical analysis of ’stemness’.
@@ -30,7 +30,7 @@ Does stemness remain the same type of property throughout disease progression?
 Is stemness the same type of property
 in all types of cancers of a particular tissue? 
 
-\textbf{How stemness categorization may drive therapeutic choices}
+\textbf{How stemness categorization may drive therapeutic choices
 
 Choosing to target either cancer stem cells, their niche, or both, relies on implicit pre- suppositions regarding stemness.
 
@@ -40,7 +40,7 @@ require therapeutic adaptation. If changes in stemness are driving progression r
 Do they share some underlying characteristics that justify their biological clustering, or is ’stem cell’ just a convenient category to group cell types that are actually distinct? 
 
 
-\subsubsection{Comments}
+### Comments
 No images needed. 
 
 Any of the 4 views of stemness as property are compatible with valid definitions of stem cells. 
@@ -54,20 +54,20 @@ Do they share some underlying characteristics that justify their biological clus
 
 How rigorous is the "stemness" criterion, when we have (at least) 4 different views of cell types? 
 
-\subsection{Meta Research:Reader engagement with medical content on Wikipedia
-Abstract}
-    \cite{maggio2020reader}
-\subsubsection{Highlights}
+## Meta Research:Reader engagement with medical content on Wikipedia
+Abstract
+    \cite{maggio2020reader
+### Highlights
  WikiProject Medicine (WPM).
 
 Faculty at several health professions schools teach courses on editing Wikipedia
 
-\subsubsection{Comments}
+### Comments
 (These are all expected conclusions, as these pages are manually curated to be of relevance to medicine. )
 
-\subsection{Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence}
-    \cite{keeling2019meanings}
-\subsubsection{Highlights}
+## Philosophy of Biology: The meanings of 'function' in biology and the problematic case of de novo gene emergence
+    \cite{keeling2019meanings
+### Highlights
 
 Here we explore the use of this word (and derivatives like functional) in research papers about de novo gene birth.
 
@@ -103,9 +103,9 @@ The cultural diversity of readers effectively prevents a unique definition to be
 
 We endorse qualifying the use of function or avoiding the word altogether. 
 
-We encourage researchers to refine the model, adapt it to other subfields of genomics and other types of biological objects (metabolites, \textbf{cell types}, organs), and propose alternatives.
+We encourage researchers to refine the model, adapt it to other subfields of genomics and other types of biological objects (metabolites, \textbf{cell types, organs), and propose alternatives.
 
-\subsubsection{Comments}
+### Comments
 Most scientific publications also do not explicitly include a definition of cell type. 
 
 For a cell class be denominated a type it must, by definition, have a function too? Good idea of restricting a subfield and gathering meanings.
@@ -118,9 +118,9 @@ Explicitly mentions the need for a better conceptualization of cell types.
 
 About 54 references. 
 
-\subsection{Philosophy of Biology: Philosophical bias is the one bias that science cannot avoid}
-    \cite{andersen2019philosophy}
-\subsubsection{Highlights}
+## Philosophy of Biology: Philosophical bias is the one bias that science cannot avoid
+    \cite{andersen2019philosophy
+### Highlights
 
 ’philosophical bias’. These are basic implicit assumptions in science about how the world is (ontology), what we can know about it (epistemology), or how science ought to be practiced (norms)
 
@@ -142,12 +142,12 @@ the evaluation of scientific results.
 
 Awareness of the bias is a necessary premise for any argument of a theory is better.
 
-\subsubsection{Comments}
+### Comments
 About 27 references. Does not make any kind of quantitative experiment, mostly relying on arguments and well constructed paragraphs/ideas.
 
-\subsection{Philosophy of Biology: The challenges of big data biology}
-    \cite{leonelli2019philosophy}
-\subsubsection{Highlights}
+## Philosophy of Biology: The challenges of big data biology
+    \cite{leonelli2019philosophy
+### Highlights
 Big data biology also raises fundamental questions in the philosophy of science: for example, what is a good dataset, and how can reliable knowledge be extracted from big data?
 
 Biological concepts – no matter how loosely defined – are always embedded in broader theoretical perspectives on how nature works.
@@ -175,7 +175,7 @@ Access to original samples also provides a concrete point of contact between res
 Automated data analysis is an exciting prospect for biological discovery. Far from making human judgement unnecessary, the increasing power of computational algorithms requires a proportional increase in critical thinking.
 
 
-\subsubsection{Comments}
+### Comments
 
 Philosophical insights to confront key challenges in biology - kind of the general idea of the Philosophy of biology session. 
 
@@ -183,9 +183,9 @@ Multilabel, single concept definitions (such as in Wikidata) might satisfy some 
 
 All data produced is stained by human interpretation. That explicits the need to have good definitions for concepts in single-cell biology to benefit from the data, even in the "raw" format. 
 
-\subsection{Philosophy of Biology: From primal scenes to synthetic cells}
-    \cite{zwart2019philosophy}
-\subsubsection{Highlights}
+## Philosophy of Biology: From primal scenes to synthetic cells
+    \cite{zwart2019philosophy
+### Highlights
 
 But what kind of entity would a synthetic cell really be? I assess this question from a philosophical perspective,
 
@@ -199,4 +199,4 @@ Triangulation, which means that we need a third position fromwhich we can attemp
 
 Goethe (explored the idea of creating life in  Faust. Also Mary Shelley (Frankenstein) via HG Wells (The Stolen Bacillus) up to contemporary writers.
 
-\subsubsection{Comments}
+### Comments
