--- a/content/12.other.md
+++ b/content/12.other.md
@@ -1,9 +1,9 @@
-\section{Other}
+# Other
 
-\subsection{Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain}
-    \cite{sugino2019mapping}
+## Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
+    \cite{sugino2019mapping
     
-\subsubsection{Highlights}
+### Highlights
 200 genetically identified cell populations, and two gene classes contributing distinctly to neuronal diversity.
 
 Cells from micro-dissected brain regions may contain more than one atomic cell type, we refer to these as genetically- and anatomically-identified cell populations (GACPs).
@@ -19,7 +19,7 @@ Alternative splicing: most branch point choices are made consistently, in an all
 
 We assume that cell types are organized hierarchically in a tree-like fashion proceeding from major branches (e.g. ’cortical excitatory neuron’) to more specialized subtypes, with the terminal ’leaf-level’ branches comprising ’atomic’ cell types. Profiled cell populations are defined operationally by the intersection of a transgenic mouse strain (or in some cases anatomical projection target) and a brain region.
 
-\subsubsection{Comments}
+### Comments
 
 "atomic cell type", does this concept even make sense?
 
@@ -27,10 +27,10 @@ Treats groups not as cell types, but as genetically- and anatomically-identified
 
 Explicit assumption of hierarchy and atomic cell types!
 
-\subsection{Terminal Selectors of Neuronal Identity}
-    \cite{hobert2016terminal}
+## Terminal Selectors of Neuronal Identity
+    \cite{hobert2016terminal
     
-\subsubsection{Highlights}
+### Highlights
 
 Terminal identity features of a mature neuron are often coregulated by so-called terminal selector transcription factors.
 
@@ -66,14 +66,14 @@ At the time of writing the original essay on the terminal selector concept, only
 
 The purpose of this chapter has been to provide a description of the general features of gene regulatory programs that operate in terminally differentiated neuron types throughout the C. elegans nervous system
 
-\subsubsection{Comments}
+### Comments
 
 118 anatomically defined neuron types 
 
-\subsection{Construction of a human cell landscape at single-cell level}
-    \cite{citation}
+## Construction of a human cell landscape at single-cell level
+    \cite{citation
     
-\subsubsection{Highlights}
+### Highlights
 
 Master TFs work in discrete modules to specify major human cell types such as neuron, erythroid cell and cainar cell. 
 
@@ -82,12 +82,12 @@ Mapping of human cell types by  scHCL. Match to reference transcriptomes by corr
 Integrated data to the Mouse Cell Atlas.
 
 We propose a landscape model that is conserved in mammal: stem cells are transcriptionally "indistinct" and "stochastic" and differentiated cells are transcriptionally "distinct" and "stable"; the wiring of the regulons in the genome pre determines the terminal steady cellular states.
-\subsubsection{Comments}
+### Comments
 
-\subsection{The Definition of Cell Type}
-    \cite{schwartz1999definition}
+## The Definition of Cell Type
+    \cite{schwartz1999definition
     
-\subsubsection{Highlights}
+### Highlights
 What do we mean by “cell type?” 
 
 We know that cultured smooth muscle cells obtained in different ways have different stable phenotypes. These results suggested that the cultures somehow represent a model for the cells forming the neointima in vivo.
@@ -98,7 +98,7 @@ One implication of definitive analyses of gene expression should be a redefiniti
 In summary, biology is changing. We have the tools to explore hypothesis-based studies in increasingly minute detail. At the same time, systematic exploration will provide us with more pathways to be defined. As such studies proceed, the functional map will get more and more complex. The challenge will be to discriminate critical mechanistic steps from less important details.
 
 
-\subsubsection{Comments}
+### Comments
 "These studies, taken together, illustrate a major change in how we define cell type, a change that is about to be accelerated by the power of systematic genomics" --> Initial description of how transcriptomics would change our view of cell type diversity
 
 
