--- a/content/14.philosophy.md
+++ b/content/14.philosophy.md
@@ -1,6 +1,6 @@
-\subsection{Opinion: Why science needs philosophy}
-    \cite{laplane2019philosophy}
-\subsubsection{Highlights}
+## Opinion: Why science needs philosophy
+    \cite{laplane2019philosophy
+### Highlights
 
 This independence created by philosophical insight is—in my opinion— the mark of distinction between a mere artisan or specialist and a real seeker after truth. (Albert Einstein, Letter to Robert Thornton, 1944)
 
@@ -26,4 +26,4 @@ But how in practice can we facilitate cooperation
 between researchers and philosophers? At first sight, the solution might seem obvious: each commu- nity should make a step toward the other. Yet
 
 
-\subsubsection{Comments}
+### Comments
